--- a/css/style.css
+++ b/css/style.css
@@ -141,8 +141,6 @@
     justify-content: space-between;
   }
 
-/* исправить адаптивную верстку */
-
   .box {
     position: relative;
     width: 24%;
@@ -184,8 +182,6 @@
   .box-4 {
     background-image: url(/image/trend4.jpg);
   }
-
-  /* Обратить внимание на цвет border */
 
   .box-content {
     box-sizing: border-box;
@@ -249,6 +245,7 @@
   }
   
   .blog_img {
+    max-height: 294px;
     width: 381px;
     background-color: #eff6f1;
   }
@@ -263,6 +260,7 @@
     margin-top: -14px;
     width: 370px;
     display: flex;
+    flex-wrap: wrap;
   }
   
   .news_item {
@@ -741,4 +739,83 @@
   font-weight: 700;
   text-align: center;
   color: #999999;
+}
+
+/* Pop-up */
+
+.popup {
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0 0 0 / 75%);
+  overflow: hidden;
+  position: fixed;
+  top: 0px;
+  z-index: 1;
+}
+
+.popup-content {
+  position: fixed;
+  left: 40%;
+  top: 25%;
+  width: 25%;
+  height: 60%;
+  background-color: #ffffff;
+  z-index: 2;
+}
+
+.popup-title {
+  padding-top: 40px;
+}
+
+.popup_close {
+	position: absolute;
+  top: -30px;
+  right: 20px;
+	cursor: pointer;
+}
+
+.popup_close::before, .popup_close::after {
+	content: '';
+	position: absolute;
+	top: 10px;
+	display: block;
+	width: 24px;
+	height: 3px;
+  background-color: #ffffff;
+}
+
+
+.popup_close::before {
+	transform: rotate(45deg);
+}
+
+.popup_close::after {
+	transform: rotate(-45deg);
+}
+
+.select {
+ display: inline-block;
+ box-sizing: border-box;
+ width: 100%;
+ height: 38px;
+ 
+ padding-left: 10px;
+ padding-right: 25px;
+ 
+ margin: 0;
+ 
+ border: 1px solid #cbd1d4;
+ background-color: #f9f9f9;
+ background-image: url("https://netology-code.github.io/html-2-homeworks/form-elements/city-select/img/select-arrows.svg");
+ background-repeat: no-repeat;
+ background-position: right 5px center;
+ 
+ font-size: 14px;
+ font-family: Arial,sans-serif;
+ color: #333333;
+}
+
+.select:focus {
+ outline: 2px solid #0f8fee;
+ outline-offset: 4px;
 }
