--- a/css/tablet.css
+++ b/css/tablet.css
@@ -49,11 +49,11 @@
     position: absolute;
 }
   .line1, .line2, .line3 {
-      width: 23px;
-      height: 3px;
-      background-color: #fff;
-      margin: 5px 0;
-      transition: 0.3s;
+    width: 23px;
+    height: 3px;
+    background-color: #fff;
+    margin: 5px 0;
+    transition: 0.3s;
   }
 
   .nav_menu {
@@ -122,14 +122,14 @@
     letter-spacing: 0;
   }
 
-  /* Content - Main - article */
+  /* Main - content - article */
 
-  .content {
+  .main {
     gap: 35px;
     padding: 48px 35px 0;
   }
 
-  .main {
+  .content {
     width: 75%;
   }
 
